--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "@types/socket.io": "^2.1.2",
+    "bad-words": "^3.0.0",
     "express": "^4.17.1",
     "socket.io": "^2.2.0"
   },
