--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
