--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chat Application using Nodejs and socket IO",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon src/index.js"
   },
   "repository": {
     "type": "git",
